--- a/package.json
+++ b/package.json
@@ -6,15 +6,8 @@
   "scripts": {
     "compile:sass": "sass --watch scss/style.scss css/style.css"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BrianBravoBornet/IdeaBravo2daEntrega.git"
-  },
+
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BrianBravoBornet/IdeaBravo2daEntrega/issues"
-  },
-  "homepage": "https://github.com/BrianBravoBornet/IdeaBravo2daEntrega#readme"
+  "license": "ISC"
 }
